added reset.css and dramatically changed the content of the page

--- a/index.html
+++ b/index.html
@@ -1,32 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Student Bio</title>
+        <title>The Majestic Brown Bear</title>
+        <link rel="stylesheet" type="text/css" href="reset.css">
         <link rel="stylesheet" type="text/css" href="style.css">
+
+        
     </head>
     <body>
         <header>
-            <h1>Student Bio</h1>
+            <h1>The Majestic Brown Bear</h1>
         </header>
-
-        <div>
-            <section>
-                <h2>Matthew Sawyer</h2>
-                <img id="image" class="center" src="https://www.placecage.com/200/200"/>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam tellus ipsum, elementum at ultricies et, fermentum facilisis libero. In rutrum velit id iaculis placerat. Aliquam ex neque, condimentum a lobortis nec, dignissim et dolor. Morbi consectetur leo ut velit viverra, ac euismod urna scelerisque. Vestibulum finibus erat et condimentum tincidunt. Etiam posuere, orci sed faucibus luctus, dolor erat faucibus odio, ut gravida dolor lorem et ex. Curabitur a tincidunt urna, eget pellentesque nisi.
-                </p>
-                <br>
-            </section>
-            <section>
-                <h2>Contact Info</h2>
-                <ul>
-                    <li><b>Email:</b> <a href="https://lmgtfy.com/?q=What+is+a+fake+email">TotallyNotFakeEmail@notreal.com</a></li>
-                    <li><b>Github:</b> <a href="http://www.screenprank.com/gandalf.html">VeryLigitimateGithubLink</a></li>
-                    <li><b>Portfolio:</b> <a href="https://i.imgur.com/lFIs1rk.png">Click here to view</a></li>
-                </ul>
-            </section>
-        </div>
-        <script type="text/javascript" src="javascript.js"></script>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam tellus ipsum, elementum at ultricies et, fermentum facilisis libero. In rutrum velit id iaculis placerat. Aliquam ex neque, condimentum a lobortis nec, dignissim et dolor. Morbi consectetur leo ut velit viverra, ac euismod urna scelerisque. Vestibulum finibus erat et condimentum tincidunt. Etiam posuere, orci sed faucibus luctus, dolor erat faucibus odio, ut gravida dolor lorem et ex. Curabitur a tincidunt urna, eget pellentesque nisi.
+            </p>
     </body>
 </html>
